--- a/OnlineShop/Views/Register/Index.cshtml
+++ b/OnlineShop/Views/Register/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model RegisterViewModel
 
-<div class="container mt-5">
+<div class="container mt-5" >
     <div class="d-flex justify-content-center">
         <form method="post" class="col-10 col-xl-6">
+            <div asp-validation-summary="ModelOnly">
+
+            </div>
             <div class="mb-3">
                 <label asp-for="FirstName" class="form-label">
                 </label>
