--- a/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Views/Shared/_Layout.cshtml
@@ -10,12 +10,10 @@
 <body>
     <div class="container-fluid">
         <div class="d-flex justify-content-between align-items-center">
-            <div class="">
-                Custom User
-            </div>
-            <a asp-action="Index" asp-controller="Register" class="m-2">Register</a>
-            <a asp-action="Index" asp-controller="Login" class="m-2">Login</a>
+            <div class="">Signed in as:</div>
+            <partial name="_Login" />
         </div>
+       
     </div>
     
     @RenderBody()
