--- a/OnlineShop/Views/_ViewImports.cshtml
+++ b/OnlineShop/Views/_ViewImports.cshtml
@@ -1,2 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using OnlineShop.Models.Identity;
 @using OnlineShop.ViewModels
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<CustomUser> _signInManager
+@inject UserManager<CustomUser> _userManager
